some changes to colors

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 									<li>Fast visualization of animations.</li>
 								</ul>
 							</div>
+							<p>Check out the <a href="https://github.com/enekoassets/BVHtools" target="_blank">repository</a> or the <a href="https://enekoassets.github.io/bvhTools/#/" target="_blank">documentation page</a> for more info.</p>
 						</section>
 
 					</div>
