added my picture, added some new font pictures, removed first description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Eneko Assets</h1>
-						<p>Hello, my name is Eneko Atxa. In this site you will find the assets that I have made or I am currently making.</p>
 						<ul class="icons">
 							<li><a href="https://enekoatxa.itch.io/" target="_blank" class="icon brands fa-itch-io alt"><span class="label">Itch.IO</span>
 								<span class="label">Itch.IO</span>
@@ -58,7 +57,7 @@
 									</header>
 									<p>Welcome to my site! Here you will be able to find the assets that I have made or I am currently making.</p>
 								</div>
-								<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image"><img src="assets/images/ni.jpg" alt="" /></span>
 							</div>
 						</section>
 
@@ -73,12 +72,16 @@
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/thin-sans-presentation.png" alt="" /></span><p>Thin Sans</p></div>
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/base-sans-presentation.png" alt="" /></span><p>Base Sans</p></div>
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/groovy-pixel-presentation.png" alt="" /></span><p>Groovy Pixel</p></div>
+							<div class="col-3"><span class="image fit"><img src="assets/assetImages/compact-mini-presentation.png" alt="" /></span><p>Compact Mini</p></div>
+							<div class="col-3"><span class="image fit"><img src="assets/assetImages/six-eight-presentation.png" alt="" /></span><p>Six-eight</p></div>
+							<div class="col-3"><span class="image fit"><img src="assets/assetImages/childfont-presentation.png" alt="" /></span><p>Childfont</p></div>
+							<div class="col-3"><span class="image fit"><img src="assets/assetImages/vampixel-presentation.png" alt="" /></span><p>Vampixel</p></div>
+							<div class="col-3"><span class="image fit"><img src="assets/assetImages/pixel-modern-presentation.png" alt="" /></span><p>Pixel Modern</p></div>
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/i-shot-the-serif-presentation.png" alt="" /></span><p>I Shot the Serif</p></div>
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/minimal-presentation.png" alt="" /></span><p>Minimal</p></div>
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/pixel-comic-presentation.png" alt="" /></span><p>Pixel Comic</p></div>
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/q-rounded-presentation.png" alt="" /></span><p>Q-rounded</p></div>
 							<div class="col-3"><span class="image fit"><img src="assets/assetImages/q-squared-presentation.png" alt="" /></span><p>Q-squared</p></div>
-							<div class="col-3"><span class="image fit"><img src="assets/assetImages/six-eight-presentation.png" alt="" /></span><p>Six-eight</p></div>
 							</div>
 							<footer class="major">
 								<ul class="actions special">
