--- a/index.html
+++ b/index.html
@@ -115,11 +115,22 @@
 							</header>
 							<div class="row" style="display: flex; justify-content: center;">
 								<div>
+									<a href="https://godotshaders.com/shader/2d-burn-dissolve-from-point-v-1-0/" target="_blank">
 									<video width="560" height="315" autoplay muted loop style="border-radius: 8px;">
 										<source src="assets/assetImages/burn_from_point.mp4" type="video/mp4">
 										Your browser does not support the video tag.
 										</video>
 										<p>Burn from point</p>
+									</a>
+								</div>
+								<div>
+									<a href="https://godotshaders.com/shader/random-displacement-animation-easy-ui-animation/" target="_blank">
+										<video width="560" height="315" autoplay muted loop style="border-radius: 8px;">
+										<source src="assets/assetImages/baba.mp4" type="video/mp4">
+										Your browser does not support the video tag.
+										</video>
+										<p>Random vertex displacement</p>
+									</a>
 								</div>
 							</div>	
 							<footer class="major">
