added links to itchio in controller icons. Added glow to some elements on hover

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 							</header>
 							<h3>Pixel art UI Controller icon pack (WIP)</h3>
 							<div class="row gtr-uniform">
-								<div class="col-3"><span class="image fit"><img src="assets/assetImages/ps4-controller.png" alt="" /></span><p>Play Station 4</p></div>
-								<div class="col-3"><span class="image fit"><img src="assets/assetImages/xbox-one-controller.png" alt="" /></span><p>Xbox One</p></div>
-								<div class="col-3"><span class="image fit"><img src="assets/assetImages/switch-controller.png" alt="" /></span><p>Nintendo Switch</p></div>
-								<div class="col-3"><span class="image fit"><img src="assets/assetImages/keyboards-controller.png" alt="" /></span><p>Keyboard and Mouse</p></div>
+								<div class="col-3"><span class="image fit"><a href="https://enekoatxa.itch.io/play-station-4-pixel-art-controller-icons" target="_blank"><img src="assets/assetImages/ps4-controller.png" alt="" class="glow-hover"/></a></span><p>Play Station 4</p></div>
+								<div class="col-3"><span class="image fit"><a href="https://enekoatxa.itch.io/xbox-one-pixel-art-controller-icons" target="_blank"><img src="assets/assetImages/xbox-one-controller.png" alt="" class="glow-hover"/></a></span><p>Xbox One</p></div>
+								<div class="col-3"><span class="image fit"><a href="https://enekoatxa.itch.io/nintendo-switch-pixel-art-controller-icons" target="_blank"><img src="assets/assetImages/switch-controller.png" alt="" class="glow-hover"/></a></span><p>Nintendo Switch</p></div>
+								<div class="col-3"><span class="image fit"><a href="https://enekoatxa.itch.io/keyboard-and-mouse-pixel-art-icons" target="_blank"><img src="assets/assetImages/keyboards-controller.png" alt="" class="glow-hover"/></a></span><p>Keyboard and Mouse</p></div>
 							</div>
 							<footer class="major">
 								<ul class="actions special">
@@ -119,7 +119,7 @@
 							<div class="row" style="display: flex; justify-content: center;">
 								<div>
 									<a href="https://godotshaders.com/shader/2d-burn-dissolve-from-point-v-1-0/" target="_blank">
-									<video width="560" height="315" autoplay muted loop style="border-radius: 8px;">
+									<video class="glow-hover" width="560" height="315" autoplay muted loop style="border-radius: 8px;">
 										<source src="assets/assetImages/burn_from_point.mp4" type="video/mp4">
 										Your browser does not support the video tag.
 										</video>
@@ -128,7 +128,7 @@
 								</div>
 								<div>
 									<a href="https://godotshaders.com/shader/random-displacement-animation-easy-ui-animation/" target="_blank">
-										<video width="560" height="315" autoplay muted loop style="border-radius: 8px;">
+										<video class="glow-hover" width="560" height="315" autoplay muted loop style="border-radius: 8px;">
 										<source src="assets/assetImages/baba.mp4" type="video/mp4">
 										Your browser does not support the video tag.
 										</video>
