--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
 										<p>Random vertex displacement</p>
 									</a>
 								</div>
+								<div>
+									<a href="https://godotshaders.com/shader/2d-burn-dissolve-with-direction-v-1-0/" target="_blank">
+										<video class="glow-hover" width="560" height="315" autoplay muted loop style="border-radius: 8px;">
+										<source src="assets/assetImages/burn_line.mp4" type="video/mp4">
+										Your browser does not support the video tag.
+										</video>
+										<p>Directional burn</p>
+									</a>
+								</div>
 							</div>	
 							<footer class="major">
 								<ul class="actions special">
