added my academic page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<li><a href="#assets">Assets</a></li>
 							<li><a href="#shaders">Shaders</a></li>
 							<li><a href="#others">Other things</a></li>
+							<li><a href="#academic">Academic page</a></li>
 						</ul>
 					</nav>
 
@@ -162,15 +163,27 @@
 								<p>I am currently making a python library to work with BVH (BioVision Hierarchy) animation files. These are some of its features:</p>
 							<div class="row" style="text-align: justify;">								
 								<ul>
-									<li>Easily read/write BVH files.</li>
-									<li>Easily access the BVH data inside Python. </li>
-									<li>Perform forward kinematics and obtain the position of the bones.</li>
+									<li>Read/write BVH files.</li>
+									<li>Access the BVH data inside Python. </li>
+									<li>Perform forward kinematics.</li>
+									<li>Resample animation at different FPS.</li>
 									<li>Slice and merge BVH files.</li>
-									<li>Perform typical animation operations like centering the skeleton.</li>
-									<li>Fast visualization of animations.</li>
+									<li>Typical animation operations like moving, rotating or centering the skeleton.</li>
+									<li>Removing bones and resizing the skeleton.</li>
+									<li>Converting angle representations.</li>
+									<li>Calculating metrics: speeds, accelerations, jerks, foot contacts...</li>
+									<li>Animation visualization.</li>
+									<li>Writing CSV data.</li>
+									<li>CLI functionalities.</li>
 								</ul>
 							</div>
 							<p>Check out the <a href="https://github.com/enekoassets/BVHtools" target="_blank">repository</a> or the <a href="https://enekoassets.github.io/bvhTools/#/" target="_blank">documentation page</a> for more info.</p>
+						</section>
+
+						<section id="academic" class="main special">
+							<header class="major">
+								<h2>Academic Page</h2>
+								<p>My academic page can be accessed <a href="academic.html">here</a>.</p>
 						</section>
 
 					</div>
